--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,9 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="author" content="Keg Avakian" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="React app to automatically generate and add playlists to your Spotify account using AI"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
