restyled body and creation page

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,8 +26,8 @@
     -->
     <title>DJ Buddy</title>
   </head>
-  <body>
+  <body style="margin: 0; padding: 0">
+    <div style="margin: 0; padding: 0" id="root"></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
   </body>
 </html>
